--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,13 @@ jobs:
 
    - name: Run Bandit Scan
      run: bandit -ll -ii -r .
-
+     
+   - name: Upload Artifact
+     uses: actions/upload-artifact@v3
+     if: always()
+     with:
+      name: bandit-findings
+      path: bandit-report.json
 
 
 
