--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,11 +45,17 @@ jobs:
    - name: Build Docker Image
      run: docker build -f Dockerfile -t myapp:latest .
 
+     
+   - name: Docker Login
+     uses: docker/login-action@v2
+     with:
+      username: ${{ secrets.REPO_USER }}
+      password: ${{ secrets.REPO_PWD }}
+
    - name: Docker Scout Scan
      run: |
        curl -fsSL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh -o install-scout.sh
        sh install-scout.sh
-       echo ${{ secrets.REPO_PWD }} | docker login -u ${{ secrets.REPO_USER }} --password-stdin
        docker scout quickview
        docker scout cves
 
