--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,12 +44,11 @@ jobs:
 
    - name: Build Docker Image
      run: docker build -f Dockerfile -t myapp:latest .
-
      
    - name: Docker Login
      uses: docker/login-action@v2
      with:
-      username: ${{ secrets.REPO_USER }}
+      username: ${{ secrets.REPO_NAME }}
       password: ${{ secrets.REPO_PWD }}
 
    - name: Docker Scout Scan
