--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
    - name: Build Docker Image
      run: docker build -f Dockerfile -t myapp:latest .
      
-   - name: Docker Login_
+   - name: Docker Login
      uses: docker/login-action@v2
      with:
       username: ${{ secrets.REPO_NAME }}
