--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,21 +51,21 @@ jobs:
       username: ${{ secrets.REPO_NAME }}
       password: ${{ secrets.REPO_PWD }}
 
-   # - name: Docker Scout Scan
-   #   run: |
-   #     curl -fsSL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh -o install-scout.sh
-   #     sh install-scout.sh
-   #     docker scout quickview
-   #     docker scout cves
-
    - name: Docker Scout Scan
-     uses: docker/scout-action@v1.0.9
-     with:
-      dockerhub-user: ${{ secrets.REPO_USER }}
-      dockerhub-password: ${{ secrets.REPO_PWD }}
-      command: quickview,cves
-      only-severities: critical,high
-      sarif-file: scout-report.sarif
+     run: |
+       curl -fsSL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh -o install-scout.sh
+       sh install-scout.sh
+       docker scout quickview
+       docker scout cves --only-severity critical,high --format sarif --output image.sarif.json
+
+   # - name: Docker Scout Scan
+   #   uses: docker/scout-action@v1.0.9
+   #   with:
+   #    dockerhub-user: ${{ secrets.REPO_USER }}
+   #    dockerhub-password: ${{ secrets.REPO_PWD }}
+   #    command: quickview,cves
+   #    only-severities: critical,high
+   #    sarif-file: scout-report.sarif
 
    - name: Upload Artifact
      uses: actions/upload-artifact@v3
