--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,7 +56,7 @@ jobs:
        curl -fsSL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh -o install-scout.sh
        sh install-scout.sh
        docker scout quickview
-       docker scout cves --only-severity critical,high --format sarif --output image.sarif.json
+       docker scout cves --only-severity critical,high --format sarif --output scout-report.sarif.json
 
    # - name: Docker Scout Scan
    #   uses: docker/scout-action@v1.0.9
@@ -72,7 +72,7 @@ jobs:
      if: always()
      with:
       name: docker-scout-findings
-      path: scout-report.sarif
+      path: scout-report.sarif.json
 
 
 
