--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
    runs-on: ubuntu-latest
 
    steps:
-   - name: Checkout code
+   - name: Checkout code_
      uses: actions/checkout@v2
 
    - name: Set up Docker
